test/fixtures/error/08-any/input.ts
import mint from "mintz";

// biome-ignore lint/suspicious/noExplicitAny: intentional for the error test
export const x = mint<any>();
